# sql_homewok

./: .gitignore  CMakeLists.txt
.github/workflows/: serever.yaml
include/: Client.h  CommandCreator.h  CommandParser.h  Commands.h  Database.h  ICommand.h  Server.h  StructElem.h
src/: Client.cpp  CommandCreator.cpp  CommandParser.cpp  Database.cpp  Server.cpp  main.cpp
